Fixed issues in sales report and added some checks

--- a/POS.properties
+++ b/POS.properties
@@ -1,5 +1,5 @@
 app.version=1.0
-app.name=POS Application
+app.name=pos Application
 app.baseUrl=/pos
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
