--- a/POS.properties
+++ b/POS.properties
@@ -10,7 +10,7 @@ jdbc.username=root
 	
 jdbc.password=Vis2000@
 	
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 	
 hibernate.show_sql=false
 	
